FLX-104 Cards do not shift correctly when closing tabs and cards on right side of stage

--- a/app/stylesheets/theme/default/style.sass
+++ b/app/stylesheets/theme/default/style.sass
@@ -150,7 +150,9 @@
           .info
             z-index: 1
             margin-left: -225px
+            overflow: hidden
             &.open
+              overflow: visible
               margin-left: 0px
               .drawer
                 +box-shadow
